infrastructure/k8s/fortio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio
  labels:
    app: fortio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
  template:
    metadata:
      labels:
        app: fortio
    spec:
      containers:
      - name: fortio
        image: fortio/fortio:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        args:
        - server
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
